--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/postcss": "^4.0.0",
     "@tanstack/react-table": "^8.21.2",
+    "@types/google-one-tap": "^1.2.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
